--- a/gk.bib
+++ b/gk.bib
@@ -28135,7 +28135,7 @@ Theory Group (Formerly: E1071), TU Wien},
   organization = {ACM}
 }
 @inproceedings{ErlPihKor2014,
-  title =        {Rappor: Randomized aggregatable privacy-preserving
+  title =        {RAPPOR: Randomized aggregatable privacy-preserving
                   ordinal response},
   author =       {Erlingsson, {\'U}lfar and Pihur, Vasyl and Korolova,
                   Aleksandra},
@@ -28144,4 +28144,12 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {1054--1067},
   year =         {2014},
   organization = {ACM}
+}
+@inproceedings{DinKulYek2017,
+  title =        {Collecting telemetry data privately},
+  author =       {Ding, Bolin and Kulkarni, Janardhan and Yekhanin,
+                  Sergey},
+  booktitle =    {Advances in Neural Information Processing Systems},
+  pages =        {3571--3580},
+  year =         {2017}
 }
