--- a/gk.bib
+++ b/gk.bib
@@ -28153,3 +28153,12 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {3571--3580},
   year =         {2017}
 }
+@article{WilZhaLam2019,
+  title =        {Differentially Private SQL with Bounded User
+                  Contribution},
+  author =       {Wilson, Royce J and Zhang, Celia Yuxin and Lam,
+                  William and Desfontaines, Damien and
+                  Simmons-Marengo, Daniel and Gipson, Bryant},
+  journal =      {arXiv preprint arXiv:1909.01917},
+  year =         {2019}
+}
