--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2630,9 +2630,18 @@ pages={1037--1060},
   url =          {https://doi.org/10.7910/DVN/A9LZNV}
 }
 @article {KinPer2019,
-	title = {A New Model for Industry-Academic Partnerships},
-	journal = {PS: Political Science and Politics},
-	year = {In press},
-	url = {GaryKing.org/partnerships},
-	author = {Gary King and Nathaniel Persily}
+  title =        {A New Model for Industry-Academic Partnerships},
+  journal =      {PS: Political Science and Politics},
+  year =         {In press},
+  url =          {GaryKing.org/partnerships},
+  author =       {Gary King and Nathaniel Persily}
+}
+@article{GabHonKin2016,
+  title =        {Psi ($\Psi$): a private data sharing interface},
+  author =       {Gaboardi, Marco and Honaker, James and King, Gary
+                  and Murtagh, Jack and Nissim, Kobbi and Ullman,
+                  Jonathan and Vadhan, Salil},
+  journal =      {arXiv preprint arXiv:1609.04340},
+  url =          {j.mp/2oSQ7F6},
+  year =         {2016}
 }
