--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2642,6 +2642,6 @@ pages={1037--1060},
                   and Murtagh, Jack and Nissim, Kobbi and Ullman,
                   Jonathan and Vadhan, Salil},
   journal =      {arXiv preprint arXiv:1609.04340},
-  url =          {j.mp/2oSQ7F6},
+  url =          {GaryKing.org/psi},
   year =         {2016}
 }
