--- a/gk.bib
+++ b/gk.bib
@@ -28162,3 +28162,18 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1909.01917},
   year =         {2019}
 }
+@article{DamBal2019,
+  author =       {Damien Desfontaines and Bal{\'{a}}zs Pej{\'{o}}},
+  title =        {SoK: Differential Privacies},
+  journal =      {CoRR},
+  volume =       {abs/1906.01337},
+  year =         {2019},
+  url =          {http://arxiv.org/abs/1906.01337},
+  archivePrefix ={arXiv},
+  eprint =       {1906.01337},
+  timestamp =    {Thu, 13 Jun 2019 13:36:00 +0200},
+  biburl =
+                  {https://dblp.org/rec/bib/journals/corr/abs-1906-01337},
+  bibsource =    {dblp computer science bibliography,
+                  https://dblp.org}
+}
