--- a/gk.bib
+++ b/gk.bib
@@ -28177,3 +28177,11 @@ Theory Group (Formerly: E1071), TU Wien},
   bibsource =    {dblp computer science bibliography,
                   https://dblp.org}
 }
+@article{BalWan2018,
+  title =        {Improving the gaussian mechanism for differential
+                  privacy: Analytical calibration and optimal
+                  denoising},
+  author =       {Balle, Borja and Wang, Yu-Xiang},
+  journal =      {arXiv preprint arXiv:1805.06530},
+  year =         {2018}
+}
