--- a/gk.bib
+++ b/gk.bib
@@ -28182,6 +28182,7 @@ Theory Group (Formerly: E1071), TU Wien},
                   privacy: Analytical calibration and optimal
                   denoising},
   author =       {Balle, Borja and Wang, Yu-Xiang},
-  journal =      {arXiv preprint arXiv:1805.06530},
+  journal =      {International Conference on Machine Learning (ICML),
+                  arXiv:1805.06530},
   year =         {2018}
 }
