--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2645,3 +2645,13 @@ pages={1037--1060},
   url =          {GaryKing.org/psi},
   year =         {2016}
 }
+
+@Article{EvaKinSch2020,
+  author =       {Georgina Evans and Gary King and Margaret
+                  Schwenzfeier and Abhradeep Thakurta},
+  title =        {Statistically Valid Inferences from Privacy
+                  Protected Data},
+  journal =      { },
+  year =         2020,
+  URL =          {GaryKing.org/dp}
+}
