--- a/gk.bib
+++ b/gk.bib
@@ -28186,3 +28186,10 @@ Theory Group (Formerly: E1071), TU Wien},
                   arXiv:1805.06530},
   year =         {2018}
 }
+@article{Gong2019,
+  title =        {Exact Inference with Approximate Computation for
+                  Differentially Private Data via Perturbations},
+  author =       {Gong, Ruobin},
+  journal =      {arXiv preprint arXiv:1909.12237},
+  year =         {2019}
+}
