--- a/gk.bib
+++ b/gk.bib
@@ -28193,3 +28193,21 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1909.12237},
   year =         {2019}
 }
+@Article{MesDeGHil2020,
+  author =       {Solomon Messing, Christina DeGregorio,
+                  Bennett Hillenbrand, Gary King, Saurav
+                  Mahanti, Zagreb Mukerjee, Chaya Nayak,
+                  Nathaniel Persily, Bogdan State, Arjun
+                  Wilkins},
+  title =        {Facebook Privacy-Protected Full URLs Data Set},
+  journal =      { },
+  year =         {2020},
+  OPTkey =       {},
+  OPTvolume =    {},
+  OPTnumber =    {},
+  OPTpages =     {},
+  OPTmonth =     {},
+  OPTnote =      {},
+  OPTannote =    {}
+}
+
