--- a/gk.bib
+++ b/gk.bib
@@ -28194,10 +28194,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019}
 }
 @Article{MesDeGHil2020,
-  author =       {Solomon Messing, Christina DeGregorio,
-                  Bennett Hillenbrand, Gary King, Saurav
-                  Mahanti, Zagreb Mukerjee, Chaya Nayak,
-                  Nathaniel Persily, Bogdan State, Arjun
+  author =       {Solomon Messing and Christina DeGregorio and
+                  Bennett Hillenbrand and Gary King and Saurav
+                  Mahanti and Zagreb Mukerjee and Chaya Nayak and
+                  Nathaniel Persily and Bogdan State and Arjun
                   Wilkins},
   title =        {Facebook Privacy-Protected Full URLs Data Set},
   journal =      { },
