--- a/gk.bib
+++ b/gk.bib
@@ -28211,3 +28211,16 @@ Theory Group (Formerly: E1071), TU Wien},
   OPTannote =    {}
 }
 
+@article{diaz2013existence,
+  title =        {On the existence of a normal approximation to the
+                  distribution of the ratio of two independent normal
+                  random variables},
+  author =       {D{\'\i}az-Franc{\'e}s, Elo{\'\i}sa and Rubio,
+                  Francisco J},
+  journal =      {Statistical Papers},
+  volume =       {54},
+  number =       {2},
+  pages =        {309--323},
+  year =         {2013},
+  publisher =    {Springer}
+}
