--- a/gk.bib
+++ b/gk.bib
@@ -28211,7 +28211,7 @@ Theory Group (Formerly: E1071), TU Wien},
   OPTannote =    {}
 }
 
-@article{diaz2013existence,
+@article{DiaRub2013,
   title =        {On the existence of a normal approximation to the
                   distribution of the ratio of two independent normal
                   random variables},
