--- a/gk.bib
+++ b/gk.bib
@@ -28215,7 +28215,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {On the existence of a normal approximation to the
                   distribution of the ratio of two independent normal
                   random variables},
-  author =       {D{\'\i}az-Franc{\'e}s, Elo{\'\i}sa and Rubio,
+  author =       {Diaz-Frances, Eloisa and Rubio,
                   Francisco J},
   journal =      {Statistical Papers},
   volume =       {54},
