--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2655,3 +2655,15 @@ pages={1037--1060},
   year =         2020,
   URL =          {GaryKing.org/dp}
 }
+@data{DVN/TDOAPG_2020,
+  author =       {Messing, Solomon and DeGregorio, Christina and
+                  Hillenbrand, Bennett and King, Gary and Mahanti,
+                  Saurav and Mukerjee, Zagreb and Nayak, Chaya and
+                  Persily, Nate and State, Bogdan and Wilkins, Arjun},
+  publisher =    {Harvard Dataverse},
+  title =        {Facebook Privacy-Protected Full URLs Data Set},
+  year =         {2020},
+  version =      {V2},
+  doi =          {10.7910/DVN/TDOAPG},
+  url =          {https://doi.org/10.7910/DVN/TDOAPG}
+}
