--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2655,7 +2655,7 @@ pages={1037--1060},
   year =         2020,
   URL =          {GaryKing.org/dp}
 }
-@data{DVN/TDOAPG_2020,
+@data{MesDeGHil2020,
   author =       {Messing, Solomon and DeGregorio, Christina and
                   Hillenbrand, Bennett and King, Gary and Mahanti,
                   Saurav and Mukerjee, Zagreb and Nayak, Chaya and
