--- a/gk.bib
+++ b/gk.bib
@@ -28206,3 +28206,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2013},
   publisher =    {Springer}
 }
+@article{Meng2018,
+  title =        {Statistical paradises and paradoxes in big data (I):
+                  Law of large populations, big data paradox, and the
+                  2016 US presidential election},
+  author =       {Meng, Xiao-Li and others},
+  journal =      {The Annals of Applied Statistics},
+  volume =       {12},
+  number =       {2},
+  pages =        {685--726},
+  year =         {2018},
+  publisher =    {Institute of Mathematical Statistics}
+}
