--- a/gk.bib
+++ b/gk.bib
@@ -27783,12 +27783,24 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         2018
   }
 @inproceedings{Sheffet2017,
-  title={Differentially private ordinary least squares},
-  author={Sheffet, Or},
-  booktitle={Proceedings of the 34th International Conference on Machine Learning-Volume 70},
-  pages={3105--3114},
-  year={2017}
+  title =        {Differentially private ordinary least squares},
+  author =       {Sheffet, Or},
+  booktitle =    {Proceedings of the 34th International Conference on
+                  Machine Learning-Volume 70},
+  pages =        {3105--3114},
+  year =         {2017}
 }
+
+@Article{Sheffet2019,
+  title =        {Differentially private ordinary least squares},
+  author =       {Sheffet, Or},
+  journal =      {Journal of Privacy and Confidentiality},
+  year =         2019,
+  volume =       9,
+  number =       1,
+  pages =        {1--43}
+}
+
 @inproceedings{WilMcS10,
   title =        {Probabilistic inference and differential privacy},
   author =       {Williams, Oliver and McSherry, Frank},
