--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2667,3 +2667,11 @@ pages={1037--1060},
   doi =          {10.7910/DVN/TDOAPG},
   url =          {https://doi.org/10.7910/DVN/TDOAPG}
 }
+@Article{EvaKin2020,
+  author =       {Georgina Evans and Gary King},
+  title =        {Statistically Valid Inferences from Differentially
+                  Private Data Releases},
+  journal =      { },
+  year =         2020,
+  URL =          {GaryKing.org/dpd}
+}
