--- a/gk.bib
+++ b/gk.bib
@@ -28239,3 +28239,42 @@ Theory Group (Formerly: E1071), TU Wien},
   year={2020},
   publisher={PubPub}
 }
+@article{stulajter1978,
+  title={Nonlinear estimators of polynomials in mean values of a Gaussian stochastic process},
+  author={{\v{S}}tulajter, Franti{\v{s}}ek},
+  journal={Kybernetika},
+  volume={14},
+  number={3},
+  pages={206--220},
+  year={1978},
+  publisher={Institute of Information Theory and Automation AS CR}
+}
+
+@article{thomas2011,
+  title={A moment-adjusted imputation method for measurement error models},
+  author={Thomas, Laine and Stefanski, Leonard and Davidian, Marie},
+  journal={Biometrics},
+  volume={67},
+  number={4},
+  pages={1461--1470},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{mnatsakanov2008,
+  title={Hausdorff moment problem: reconstruction of distributions},
+  author={Mnatsakanov, Robert M},
+  journal={Statistics \& Probability Letters},
+  volume={78},
+  number={12},
+  pages={1612--1618},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@misc{papoulis1984,
+  title={Random Variables, and Stochastic Processes},
+  author={Athanasios Papoulis},
+  year={1984},
+  publisher={McGraw-Hill}
+}
