--- a/gk.bib
+++ b/gk.bib
@@ -28278,3 +28278,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year={1984},
   publisher={McGraw-Hill}
 }
+@article{WarWhiFul74,
+  title =        {An errors-in-variables analysis of managerial role
+                  performance},
+  author =       {Warren, Richard D and White, Joan Keller and Fuller,
+                  Wayne A},
+  journal =      {Journal of the American Statistical Association},
+  volume =       {69},
+  number =       {348},
+  pages =        {886--893},
+  year =         {1974},
+  publisher =    {Taylor \& Francis Group}
+}
