--- a/gk.bib
+++ b/gk.bib
@@ -28290,10 +28290,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1974},
   publisher =    {Taylor \& Francis Group}
 }
-@article{AbrSte64,
+@book{AbrSte64,
   title =        {Handbook of mathematical functions with formulas,
-                  graphs, and mathematical tables US Govt},
+                  graphs, and mathematical tables US Govt, Vol.55},
   author =       {Abramowitz, M and Stegun, IA},
-  journal =      {Printing Office,
+  publisher =    {Dover},
   year =         {1964}
 }
