--- a/gk.bib
+++ b/gk.bib
@@ -28297,3 +28297,10 @@ Theory Group (Formerly: E1071), TU Wien},
   publisher =    {Dover},
   year =         {1964}
 }
+@book{Buonaccorsi2010,
+  title =        {Measurement error: models, methods, and
+                  applications},
+  author =       {Buonaccorsi, John P},
+  year =         {2010},
+  publisher =    {CRC press}
+}
