--- a/gk.bib
+++ b/gk.bib
@@ -28304,3 +28304,11 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2010},
   publisher =    {CRC press}
 }
+@article{Fan1991,
+  title =        {On the optimal rates of convergence for
+                  nonparametric deconvolution problems},
+  author =       {Fan, Jianqing},
+  journal =      {The Annals of Statistics},
+  pages =        {1257--1272},
+  year =         {1991}
+}
