move files to rightfolder

--- a/gk.bib
+++ b/gk.bib
@@ -28202,7 +28202,7 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Exact Inference with Approximate Computation for
                   Differentially Private Data via Perturbations},
   author =       {Gong, Ruobin},
-  journal =      {arXiv preprint arXiv:1909.12237},
+  journal =      {arXiv:1909.12237},
   year =         {2019}
 }
 @article{DiaRub2013,
@@ -28311,4 +28311,20 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {The Annals of Statistics},
   pages =        {1257--1272},
   year =         {1991}
+}
+@article{aktay2020google,
+  title =        {Google COVID-19 community mobility reports:
+                  Anonymization process description (version 1.0)},
+  author =       {Aktay, Ahmet and Bavadekar, Shailesh and Cossoul,
+                  Gwen and Davis, John and Desfontaines, Damien and
+                  Fabrikant, Alex and Gabrilovich, Evgeniy and
+                  Gadepalli, Krishna and Gipson, Bryant and Guevara,
+                  Miguel and Chaitanya Kamath and Mansi Kansal and Ali
+                  Lange and Chinmoy Mandayam and Andrew Oplinger and
+                  Christopher Pluntke and Thomas Roessler and Arran
+                  Schlosberg and Tomer Shekel and Swapnil Vispute and
+                  Mia Vu and Gregory Wellenius and Brian Williams and
+                  Royce J Wilson},
+  journal =      {arXiv:2004.04145},
+  year =         {2020}
 }
