--- a/gk.bib
+++ b/gk.bib
@@ -28328,3 +28328,33 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv:2004.04145},
   year =         {2020}
 }
+@article{Hug2013,
+  title =        {Qualitative comparative analysis: How inductive use
+                  and measurement error lead to problematic inference},
+  author =       {Hug, Simon},
+  journal =      {Political analysis},
+  volume =       {21},
+  number =       {2},
+  pages =        {252--265},
+  year =         {2013},
+  publisher =    {Cambridge University Press}
+}
+@article{Kamp2020,
+  title =        {Measurement Error and the Specification of the
+                  Weights Matrix in Spatial Regression Models},
+  author =       {Kamp, Garrett N Vande},
+  journal =      {Political Analysis},
+  volume =       {28},
+  number =       {2},
+  pages =        {284--292},
+  year =         {2020},
+  publisher =    {Cambridge University Press}
+}
+@book{ChrGreMig2019,
+  title =        {Transparent and reproducible social science
+                  research: How to do open science},
+  author =       {Christensen, Garret and Freese, Jeremy and Miguel,
+                  Edward},
+  year =         {2019},
+  publisher =    {University of California Press}
+}
