--- a/gk.bib
+++ b/gk.bib
@@ -28358,3 +28358,12 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {University of California Press}
 }
+@article{ErlFelMir2020,
+  title =        {Encode, Shuffle, Analyze Privacy Revisited:
+                  Formalizations and Empirical Evaluation},
+  author =       {Erlingsson, {\'U}lfar and Feldman, Vitaly and
+                  Mironov, Ilya and Raghunathan, Ananth and Song,
+                  Shuang and Talwar, Kunal and Thakurta, Abhradeep},
+  journal =      {arXiv:2001.03618},
+  year =         {2020}
+}
