--- a/gk.bib
+++ b/gk.bib
@@ -2285,7 +2285,7 @@ howpublished = {NBER}
 }
 
 @book{Christensen96,
-	author={Ronadl Christensen},
+	author={Ronald Christensen},
 	title={Plane Answers to Complex Questions: The Theory of Linear Models},
 	publisher={Springer-Verlag New York},
 	year={1996},
@@ -15582,7 +15582,7 @@ pages =	 {186-200}
 
 @book{Agresti90,
   title =	 {{Categorical data analysis}},
-  author =	 {Agresti, A.},
+  author =	 {Agresti, Alan},
   year =	 {1990},
   address =	 {New York},
   publisher = {John Wiley \& Sons, Inc.}
@@ -28366,4 +28366,16 @@ Theory Group (Formerly: E1071), TU Wien},
                   Shuang and Talwar, Kunal and Thakurta, Abhradeep},
   journal =      {arXiv:2001.03618},
   year =         {2020}
+}
+@book{Agresti2018,
+  title =        {An introduction to categorical data analysis},
+  author =       {Agresti, Alan},
+  year =         {2007},
+  publisher =    {John Wiley \& Sons}
+}
+@book{Christensen2006,
+  title =        {Log-linear models and logistic regression},
+  author =       {Christensen, Ronald},
+  year =         {2006},
+  publisher =    {Springer Science \& Business Media}
 }
