--- a/gk.bib
+++ b/gk.bib
@@ -2001,7 +2001,7 @@ howpublished = {NBER}
 }
 
 @book{CamTri98,
-	author={A.C. Cameron and P.K. Trivedi},
+	author={A. Colin Cameron and Pravin K. Trivedi},
 	title={Regression Analysis of Count Data},
 	publisher={Cambridge University Press},
 	year={1998}
