--- a/gk.bib
+++ b/gk.bib
@@ -28379,3 +28379,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2006},
   publisher =    {Springer Science \& Business Media}
 }
+@article{Oakes1999,
+  title =        {Direct calculation of the information matrix via the
+                  EM},
+  author =       {Oakes, David},
+  journal =      {Journal of the Royal Statistical Society: Series B
+                  (Statistical Methodology)},
+  volume =       {61},
+  number =       {2},
+  pages =        {479--482},
+  year =         {1999},
+  publisher =    {Wiley Online Library}
+}
