--- a/gk.bib
+++ b/gk.bib
@@ -28391,3 +28391,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {1999},
   publisher =    {Wiley Online Library}
 }
+@article{RosImaSha2016,
+  title =        {An empirical validation study of popular survey
+                  methodologies for sensitive questions},
+  author =       {Rosenfeld, Bryn and Imai, Kosuke and Shapiro, Jacob
+                  N},
+  journal =      {American Journal of Political Science},
+  volume =       {60},
+  number =       {3},
+  pages =        {783--802},
+  year =         {2016},
+  publisher =    {Wiley Online Library}
+}
