--- a/gk.bib
+++ b/gk.bib
@@ -28403,3 +28403,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   publisher =    {Wiley Online Library}
 }
+@article{JinPap2020,
+  title =        {On the correspondence of deviances and
+                  maximum-likelihood and interval estimates from
+                  log-linear to logistic regression modelling},
+  author =       {Jing, Wei and Papathomas, Michail},
+  journal =      {Royal Society Open Science},
+  volume =       {7},
+  number =       {1},
+  pages =        {191483},
+  year =         {2020},
+  publisher =    {The Royal Society}
+}
