--- a/gk.bib
+++ b/gk.bib
@@ -28415,3 +28415,10 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2020},
   publisher =    {The Royal Society}
 }
+@book{RosWri2013,
+  title =        {Handbook of survey research},
+  author =       {Rossi, Peter H and Wright, James D and Anderson,
+                  Andy B},
+  year =         {2013},
+  publisher =    {Academic Press}
+}
