--- a/gk.bib
+++ b/gk.bib
@@ -26651,7 +26651,7 @@ Theory Group (Formerly: E1071), TU Wien},
                   guises.},
   Volume =       {2},
   URL =
-                  {http://ezp-prod1.hul.harvard.edu/login?url=http://search.ebscohost.com/login.aspx?direct=true&db=pdh&AN=1998-02489-003&site=ehost-live&scope=site},
+                  {http://search.ebscohost.com/login.aspx?direct=true&db=pdh&AN=1998-02489-003&site=ehost-live&scope=site},
   Year =         {1998},
 }
 
@@ -28421,4 +28421,11 @@ Theory Group (Formerly: E1071), TU Wien},
                   Andy B},
   year =         {2013},
   publisher =    {Academic Press}
+}
+@inproceedings{Abowd2018,
+  title =        {Staring-Down the Database Reconstruction Theorem},
+  author =       {Abowd, John M},
+  booktitle =    {Joint Statistical Meetings, Vancouver, BC},
+  URL =          {bit.ly/census-reid},
+  year =         {2018}
 }
