--- a/gk.bib
+++ b/gk.bib
@@ -28429,3 +28429,14 @@ Theory Group (Formerly: E1071), TU Wien},
   URL =          {bit.ly/census-reid},
   year =         {2018}
 }
+@article{HenJea2016,
+  title =        {Re-identification attacks—A systematic literature
+                  review},
+  author =       {Henriksen-Bulmer, Jane and Jeary, Sheridan},
+  journal =      {International Journal of Information Management},
+  volume =       {36},
+  number =       {6},
+  pages =        {1184--1192},
+  year =         {2016},
+  publisher =    {Elsevier}
+}
