--- a/gk.bib
+++ b/gk.bib
@@ -28440,3 +28440,11 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   publisher =    {Elsevier}
 }
+@article{BalBelGas2019,
+  title =        {Differentially private summation with multi-message
+                  shuffling},
+  author =       {Balle, Borja and Bell, James and Gascon, Adria and
+                  Nissim, Kobbi},
+  journal =      {arXiv preprint arXiv:1906.09116},
+  year =         {2019}
+}
