--- a/gk.bib
+++ b/gk.bib
@@ -28448,3 +28448,21 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1906.09116},
   year =         {2019}
 }
+@article{Robbin2001,
+  title =        {The loss of personal privacy and its consequences
+                  for social research},
+  author =       {Robbin, Alice},
+  journal =      {Journal of Government Information},
+  volume =       {28},
+  number =       {5},
+  pages =        {493--527},
+  year =         {2001},
+  publisher =    {Elsevier}
+}
+
+@Misc{PieLyl2009,
+  year =         2009,
+  author =       {Pienta, Amy M., and Lyle, Jared},
+  title =        { Data Sharing in the Social Sciences},
+  howpublished = {https://doi.org/10.3886/ICPSR29941.v1}
+}
