--- a/gk.bib
+++ b/gk.bib
@@ -28466,3 +28466,15 @@ Theory Group (Formerly: E1071), TU Wien},
   title =        {Data Sharing in the Social Sciences},
   howpublished = {https://doi.org/10.3886/ICPSR29941.v1}
 }
+@article{Plutzer2019,
+  title =        {Privacy, Sensitive Questions, and Informed Consent:
+                  Their Impacts on Total Survey Error, and the Future
+                  of Survey Research},
+  author =       {Plutzer, Eric},
+  journal =      {Public Opinion Quarterly},
+  volume =       {83},
+  number =       {S1},
+  pages =        {169--184},
+  year =         {2019},
+  publisher =    {Oxford University Press UK}
+}
