--- a/gk.bib
+++ b/gk.bib
@@ -28478,3 +28478,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {Oxford University Press UK}
 }
+@article{ConKruRya2019,
+  title={How Transparency Affects Survey Responses},
+  author={Connors, Elizabeth C and Krupnikov, Yanna and Ryan, John Barry},
+  journal={Public Opinion Quarterly},
+  volume={83},
+  number={S1},
+  pages={185--209},
+  year={2019},
+  publisher={Oxford University Press UK}
+} 
