--- a/gk.bib
+++ b/gk.bib
@@ -28487,4 +28487,15 @@ Theory Group (Formerly: E1071), TU Wien},
   pages={185--209},
   year={2019},
   publisher={Oxford University Press UK}
-} 
+}
+
+@TechReport{FPF2017,
+  author =       {FPF},
+  title =        {Understanding corporate data sharing decisions:
+                  practices, challenges, and opportunities for sharing
+                  corporate data with researchers},
+  institution =  {Future of Privacy Forum},
+  year =         2017,
+  url =          {bit.ly/fpfpriv}
+}
+
