--- a/gk.bib
+++ b/gk.bib
@@ -28498,4 +28498,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         2017,
   url =          {bit.ly/fpfpriv}
 }
-
+@article{HerNal16,
+  title =        {The Primacy of Race in the Geography of Income-Based
+                  Voting: New Evidence from Public Voting Records},
+  author =       {Hersh, Eitan D and Nall, Clayton},
+  journal =      {American Journal of Political Science},
+  volume =       {60},
+  number =       {2},
+  pages =        {289--303},
+  year =         {2016},
+  publisher =    {Wiley Online Library}
+}
