--- a/gk.bib
+++ b/gk.bib
@@ -28509,3 +28509,11 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2016},
   publisher =    {Wiley Online Library}
 }
+@inproceedings{DwoNaoPit2010,
+  title =        {Pan-Private Streaming Algorithms.},
+  author =       {Dwork, Cynthia and Naor, Moni and Pitassi, Toniann
+                  and Rothblum, Guy N and Yekhanin, Sergey},
+  booktitle =    {ICS},
+  pages =        {66--80},
+  year =         {2010}
+}
