--- a/gk.bib
+++ b/gk.bib
@@ -28517,3 +28517,10 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {66--80},
   year =         {2010}
 }
+@article{Desmond14,
+  title =        {Estimating equations, theory of},
+  author =       {Desmond, Anthony F},
+  journal =      {Wiley StatsRef: Statistics Reference Online},
+  year =         {2014},
+  publisher =    {Wiley Online Library}
+}
