--- a/gk.bib
+++ b/gk.bib
@@ -28524,3 +28524,20 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {Wiley Online Library}
 }
+
+
+@Article{AboBenGar2020,
+  author =       {John M. Abowd, Gary L. Benedetto, Simson L.
+                  Garfinkel, Scot A. Dahl, Aref N. Dajani, Matthew
+                  Graham, Michael B. Hawes, Vishesh Karwa, Daniel
+                  Kifer, Hang Kim, Philip Leclerc, Ashwin
+                  Machanavajjhala, Jerome P. Reiter, Rolando
+                  Rodriguez, Ian M. Schmutte, William N. Sexton,
+                  Phyllis E. Singer, and Lars Vilhuber},
+  title =        {The modernization of statistical disclosure
+                  limitation at the U.S. Census Bureau},
+  journal =      { },
+  year =         2020,
+  url =          {bit.ly/DPcensus20}
+}
+
