--- a/gk.bib
+++ b/gk.bib
@@ -28527,13 +28527,13 @@ Theory Group (Formerly: E1071), TU Wien},
 
 
 @Article{AboBenGar2020,
-  author =       {John M. Abowd, Gary L. Benedetto, Simson L.
-                  Garfinkel, Scot A. Dahl, Aref N. Dajani, Matthew
-                  Graham, Michael B. Hawes, Vishesh Karwa, Daniel
-                  Kifer, Hang Kim, Philip Leclerc, Ashwin
-                  Machanavajjhala, Jerome P. Reiter, Rolando
-                  Rodriguez, Ian M. Schmutte, William N. Sexton,
-                  Phyllis E. Singer, and Lars Vilhuber},
+  author =       {John M. Abowd and Gary L. Benedetto and Simson L.
+                  Garfinkel and Scot A. Dahl and N. Dajani and Matthew
+                  Graham and Michael B. Hawes and Vishesh Karwa and Daniel
+                  Kifer and Hang Kim and Philip Leclerc and Ashwin
+                  Machanavajjhala and Jerome P. Reiter and Rolando
+                  Rodriguez and Ian M. Schmutte and William N. Sexton and
+                  Phyllis E. Singer and Lars Vilhuber},
   title =        {The modernization of statistical disclosure
                   limitation at the U.S. Census Bureau},
   journal =      { },
