--- a/gk.bib
+++ b/gk.bib
@@ -6296,6 +6296,17 @@ howpublished = {NBER}
 	editor={Arnold Zellner}
 }
 
+@article{Kaufman19,
+  title={Implementing novel, flexible, and powerful survey designs in R Shiny},
+  author={Kaufman, Aaron R},
+  journal={PloS one},
+  volume={15},
+  number={4},
+  pages={e0232424},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
 @article{KadDicWin80,
 	author={Joseph B. Kadane and James M. Dickey and Robert L. Winkler and Wayne S.
 		Smith and Stephen C. Peters},
