--- a/gk.bib
+++ b/gk.bib
@@ -66,6 +66,8 @@
 @STRING{ mitai = "Artificial Intelligence Laboratory, Massachusetts Institute of Technology"}
 @STRING{ nc = "Neural Computation"}
 
+% reminder: add new references at the end of this file only
+
 @article{AbaDruLeb02,
   author =	 {Alberto Abadie and David Druckker and Jane Leber
                   Herr and Guido W. Imbens},
