--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2388,6 +2388,19 @@ pages={1037--1060},
                   Murray Research Archive [Distributor]}}
 }
 
+@data{KauKomKi2020,
+  author =       {Kaufman, Aaron and King, Gary and Komisarchik, Mayya},
+  publisher =    {Harvard Dataverse},
+  title =        {{Replication Data for: How to Measure Legislative
+                  District Compactness If You Only Know it When You
+                  See it}},
+  UNF =          {UNF:6:35bRbD/BTBvdHB84G6SBmQ==},
+  year =         {2020},
+  version =      {DRAFT VERSION},
+  doi =          {10.7910/DVN/FA8FVF},
+  url =          {https://doi.org/10.7910/DVN/FA8FVF}
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Software
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
