--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2389,7 +2389,7 @@ pages={1037--1060},
 }
 
 @data{KauKomKi2020,
-  author =       {Kaufman, Aaron and King, Gary and Komisarchik, Mayya},
+  author =       {Kaufman, Aaron R. and King, Gary and Komisarchik, Mayya},
   publisher =    {Harvard Dataverse},
   title =        {{Replication Data for: How to Measure Legislative
                   District Compactness If You Only Know it When You
