--- a/gk.bib
+++ b/gk.bib
@@ -6298,9 +6298,9 @@ howpublished = {NBER}
 	editor={Arnold Zellner}
 }
 
-@article{Kaufman19,
+@article{Kaufman2020,
   title={Implementing novel, flexible, and powerful survey designs in R Shiny},
-  author={Kaufman, Aaron R},
+  author={Kaufman, Aaron R.},
   journal={PloS one},
   volume={15},
   number={4},
