--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2389,13 +2389,15 @@ pages={1037--1060},
 }
 
 @data{KauKomKi2020,
-  author =       {Kaufman, Aaron R. and King, Gary and Komisarchik, Mayya},
+  author =       {Kaufman, Aaron R. and King, Gary and Komisarchik,
+                  Mayya},
   publisher =    {Harvard Dataverse},
   title =        {{Replication Data for: How to Measure Legislative
                   District Compactness If You Only Know it When You
                   See it}},
   UNF =          {UNF:6:35bRbD/BTBvdHB84G6SBmQ==},
   year =         {2020},
+  version =      1,
   doi =          {10.7910/DVN/FA8FVF},
   url =          {https://doi.org/10.7910/DVN/FA8FVF}
 }
