--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2689,3 +2689,16 @@ pages={1037--1060},
   year =         2020,
   URL =          {GaryKing.org/dpd}
 }
+@data{EvaKin20,
+  author =       {Evans, Georgina and King, Gary},
+  publisher =    {Harvard Dataverse},
+  title =        {{Replication Data for: Statistically Valid
+                  Inferences from Differentially Private Data
+                  Releases, with Application to the Facebook URLs
+                  Dataset}},
+  UNF =          {UNF:6:qVAL2iA9dusDRaLhZ1X4xg==},
+  year =         {2020},
+  version =      {DRAFT VERSION},
+  doi =          {10.7910/DVN/UDFZJD},
+  url =          {https://doi.org/10.7910/DVN/UDFZJD}
+}
