--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2643,13 +2643,17 @@ pages={1037--1060},
   doi =          {10.7910/DVN/A9LZNV},
   url =          {https://doi.org/10.7910/DVN/A9LZNV}
 }
-@article {KinPer2019,
-  title =        {A New Model for Industry-Academic Partnerships},
-  journal =      {PS: Political Science and Politics},
-  year =         {In press},
+@article{king2020new,
+  title =        {A New Model for Industry--Academic Partnerships},
+  author =       {King, Gary and Persily, Nathaniel},
+  journal =      {PS: Political Science \& Politics},
+  volume =       {53},
+  number =       {4},
+  pages =        {703--709},
   url =          {GaryKing.org/partnerships},
-  author =       {Gary King and Nathaniel Persily}
+  year =         {2020}
 }
+
 @article{GabHonKin2016,
   title =        {Psi ($\Psi$): a private data sharing interface},
   author =       {Gaboardi, Marco and Honaker, James and King, Gary
