--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2643,7 +2643,7 @@ pages={1037--1060},
   doi =          {10.7910/DVN/A9LZNV},
   url =          {https://doi.org/10.7910/DVN/A9LZNV}
 }
-@article{king2020new,
+@article{KinPer2020,
   title =        {A New Model for Industry--Academic Partnerships},
   author =       {King, Gary and Persily, Nathaniel},
   journal =      {PS: Political Science \& Politics},
