--- a/gk.bib
+++ b/gk.bib
@@ -28537,8 +28537,6 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2014},
   publisher =    {Wiley Online Library}
 }
-
-
 @Article{AboBenGar2020,
   author =       {John M. Abowd and Gary L. Benedetto and Simson L.
                   Garfinkel and Scot A. Dahl and N. Dajani and Matthew
@@ -28552,4 +28550,37 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      { },
   year =         2020,
   url =          {bit.ly/DPcensus20}
+}
+@inproceedings{AboVil2008,
+  title =        {How protective are synthetic data?},
+  author =       {Abowd, John M and Vilhuber, Lars},
+  booktitle =    {International Conference on Privacy in Statistical
+                  Databases},
+  pages =        {239--246},
+  year =         {2008},
+  organization = {Springer}
+}
+@article{Liu2016,
+  title =        {Statistical Properties of Sanitized Results from
+                  Differentially Private Laplace Mechanism with
+                  Univariate Bounding Constraints},
+  author =       {Liu, Fang},
+  journal =      {arXiv preprint arXiv:1607.08554},
+  year =         {2016}
+}
+@article{Chgarest2011,
+  title =        {How can we analyze differentially-private synthetic
+                  datasets?},
+  author =       {Charest, Anne-Sophie},
+  journal =      {Journal of Privacy and Confidentiality},
+  volume =       {2},
+  number =       {2},
+  year =         {2011}
+}
+@article{Quick2019,
+  title =        {Generating Poisson-Distributed Differentially
+                  Private Synthetic Data},
+  author =       {Quick, Harrison},
+  journal =      {arXiv preprint arXiv:1906.00455},
+  year =         {2019}
 }
