--- a/gk.bib
+++ b/gk.bib
@@ -28584,3 +28584,9 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:1906.00455},
   year =         {2019}
 }
+@article{AwaCai2020,
+  title =        {One Step to Efficient Synthetic Data},
+  author =       {Awan, Jordan and Cai, Zhanrui},
+  journal =      {arXiv preprint arXiv:2006.02397},
+  year =         {2020}
+}
