--- a/gk.bib
+++ b/gk.bib
@@ -28590,3 +28590,12 @@ Theory Group (Formerly: E1071), TU Wien},
   journal =      {arXiv preprint arXiv:2006.02397},
   year =         {2020}
 }
+@article{AwaSla2018,
+  title =        {Differentially private uniformly most powerful tests
+                  for binomial data},
+  author =       {Awan, Jordan and Slavkovi{\'c}, Aleksandra},
+  journal =      {Advances in Neural Information Processing Systems},
+  volume =       {31},
+  pages =        {4208--4218},
+  year =         {2018}
+}
