--- a/gk.bib
+++ b/gk.bib
@@ -28599,3 +28599,24 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {4208--4218},
   year =         {2018}
 }
+@article{Yoder2020,
+  title =        {Does Property Ownership Lead to Participation in
+                  Local Politics? Evidence from Property Records and
+                  Meeting Minutes},
+  author =       {Yoder, Jesse},
+  journal =      {American Political Science Review},
+  volume =       {114},
+  number =       {4},
+  pages =        {1213--1229},
+  year =         {2020},
+  publisher =    {Cambridge University Press}
+}
+@article{BhaLee2019,
+  title =        {Does affirmative action worsen bureaucratic
+                  performance? evidence from the indian administrative
+                  service},
+  author =       {Bhavnani, Rikhil R and Lee, Alexander},
+  journal =      {American Journal of Political Science},
+  year =         {2019},
+  publisher =    {Wiley Online Library}
+}
