--- a/gk.bib
+++ b/gk.bib
@@ -28620,3 +28620,15 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2019},
   publisher =    {Wiley Online Library}
 }
+@article{EnaFifIma2019,
+  title =        {Using a probabilistic model to assist merging of
+                  large-scale administrative records},
+  author =       {Enamorado, Ted and Fifield, Benjamin and Imai,
+                  Kosuke},
+  journal =      {American Political Science Review},
+  volume =       {113},
+  number =       {2},
+  pages =        {353--371},
+  year =         {2019},
+  publisher =    {Cambridge University Press}
+}
