--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2706,3 +2706,11 @@ pages={1037--1060},
   doi =          {10.7910/DVN/UDFZJD},
   url =          {https://doi.org/10.7910/DVN/UDFZJD}
 }
+@article {EvaKin21,
+  title =        {Statistically Valid Inferences from Differentially
+                  Private Data Releases, with Application to the
+                  Facebook URLs Dataset},
+  journal =      {Political Analysis},
+  year =         {Forthcoming, 2021},
+  author =       {Georgina Evans and Gary King}
+}
