--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2712,5 +2712,6 @@ pages={1037--1060},
                   Facebook URLs Dataset},
   journal =      {Political Analysis},
   year =         {Forthcoming, 2021},
-  author =       {Georgina Evans and Gary King}
+  author =       {Georgina Evans and Gary King},
+  url =          {GaryKing.org/dpd}
 }
