--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2650,7 +2650,7 @@ pages={1037--1060},
   volume =       {53},
   number =       {4},
   pages =        {703--709},
-  url =          {GaryKing.org/partnerships},
+%  url =          {GaryKing.org/partnerships},
   year =         {2020}
 }
 
