--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2650,7 +2650,16 @@ pages={1037--1060},
   volume =       {53},
   number =       {4},
   pages =        {703--709},
-%  url =          {GaryKing.org/partnerships},
+  url =          {GaryKing.org/partnerships},
+  year =         {2020}
+}
+@article{KinPer2020u,
+  title =        {A New Model for Industry--Academic Partnerships},
+  author =       {King, Gary and Persily, Nathaniel},
+  journal =      {PS: Political Science \& Politics},
+  volume =       {53},
+  number =       {4},
+  pages =        {703--709},
   year =         {2020}
 }
 
@@ -2673,6 +2682,14 @@ pages={1037--1060},
   year =         2020,
   URL =          {GaryKing.org/dp}
 }
+@Article{EvaKinSch2020u,
+  author =       {Georgina Evans and Gary King and Margaret
+                  Schwenzfeier and Abhradeep Thakurta},
+  title =        {Statistically Valid Inferences from Privacy
+                  Protected Data},
+  journal =      { },
+  year =         2020
+}
 @data{MesDeGHil2020,
   author =       {Messing, Solomon and DeGregorio, Christina and
                   Hillenbrand, Bennett and King, Gary and Mahanti,
@@ -2684,14 +2701,6 @@ pages={1037--1060},
   version =      {V2},
   doi =          {10.7910/DVN/TDOAPG},
   url =          {https://doi.org/10.7910/DVN/TDOAPG}
-}
-@Article{EvaKin2020,
-  author =       {Georgina Evans and Gary King},
-  title =        {Statistically Valid Inferences from Differentially
-                  Private Data Releases},
-  journal =      { },
-  year =         2020,
-  URL =          {GaryKing.org/dpd}
 }
 @data{EvaKin20,
   author =       {Evans, Georgina and King, Gary},
@@ -2706,7 +2715,7 @@ pages={1037--1060},
   doi =          {10.7910/DVN/UDFZJD},
   url =          {https://doi.org/10.7910/DVN/UDFZJD}
 }
-@article {EvaKin21,
+@article{EvaKin21,
   title =        {Statistically Valid Inferences from Differentially
                   Private Data Releases, with Application to the
                   Facebook URLs Dataset},
@@ -2714,4 +2723,12 @@ pages={1037--1060},
   year =         {Forthcoming, 2021},
   author =       {Georgina Evans and Gary King},
   url =          {GaryKing.org/dpd}
+}
+@article{EvaKin21u,
+  title =        {Statistically Valid Inferences from Differentially
+                  Private Data Releases, with Application to the
+                  Facebook URLs Dataset},
+  journal =      {Political Analysis},
+  year =         {Forthcoming, 2021},
+  author =       {Georgina Evans and Gary King}
 }
