--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1217,6 +1217,19 @@ pages={1037--1060},
   number =	 1 ,
   note =	 {http://j.mp/lsZDuW}
 }
+@article{KinHonJos01u,
+  author =	 {Gary King and James Honaker and Anne Joseph and
+                  Kenneth Scheve},
+  title =	 {Analyzing Incomplete Political Science Data: An
+                  Alternative Algorithm for Multiple Imputation},
+  journal =	 {American Political Science Review},
+  volume =	 95,
+  year =	 2001,
+  pages =	 {49--69},
+  month =	 {3},
+  number =	 1 ,
+  note =	 {http://j.mp/lsZDuW}
+}
 
 @article{KinZen01,
   author =	 {Gary King and Langche Zeng},
@@ -1831,6 +1844,19 @@ pages={1037--1060},
 }
 
 @article{King89d,
+  author =	 {Gary King},
+  title =	 {Variance Specification in Event Count Models: From
+                  Restrictive Assumptions to a Generalized Estimator},
+  journal =	 {American Journal of Political Science},
+  volume =	 33,
+  year =	 1989,
+  pages =	 {762--784},
+  month =	 8,
+  number =	 3 ,
+  note =
+                  {{http://gking.harvard.edu/files/abs/varspecec-abs.shtml}}
+}
+@article{King89du,
   author =	 {Gary King},
   title =	 {Variance Specification in Event Count Models: From
                   Restrictive Assumptions to a Generalized Estimator},
