--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -1227,8 +1227,7 @@ pages={1037--1060},
   year =	 2001,
   pages =	 {49--69},
   month =	 {3},
-  number =	 1 ,
-  note =	 {http://j.mp/lsZDuW}
+  number =	 1
 }
 
 @article{KinZen01,
@@ -1865,9 +1864,7 @@ pages={1037--1060},
   year =	 1989,
   pages =	 {762--784},
   month =	 8,
-  number =	 3 ,
-  note =
-                  {{http://gking.harvard.edu/files/abs/varspecec-abs.shtml}}
+  number =	 3
 }
 
 @article{King89e,
